# Image-stitiching

./: .gitignore  CMakeLists.txt  README.md  autre_julie.ppm  config.yaml  sobel.ppm  test1.ppm  test2.ppm
include/libtifo/config/: config-launcher.hh  config_launcher.hh  function-timer.hh
include/libtifo/filters/: bidirectional-filter.hh  bidirectional-filter.hxx  filter.hh  filter.hxx  gaussian.hh  gaussian.hxx  laplacian.hh  sobel.hh
include/libtifo/images/: color-image.hh  color-ppm-image.hh  grayscale-image.hh  grayscale-ppm-image.hh  image.hh  ppm-image.hh
include/libtifo/math/: matrix.hh  matrix.hxx  vector.hh  vector.hxx
include/libtifo/metrics/convert/: color-converter.hh
include/libtifo/metrics/distance/: color-image-distance.hh  (+1 more)
include/libtifo/panorama/: builder.hh  clean_cut_rectangular_builder.hh
src/: CMakeLists.txt  main.cc
src/libtifo/: CMakeLists.txt  libtifo.cc
src/libtifo/config/: CMakeLists.txt  config-launcher.cc  config_launcher.cc  config_launcher.hh  function-timer.cc  function_timer.cc
src/libtifo/filters/: CMakeLists.txt  laplacian.cc  sobel.cc
src/libtifo/images/: CMakeLists.txt  color-image.cc  color-ppm-image.cc  grayscale-image.cc  grayscale-ppm-image.cc  image.cc  ppm-image.cc
src/libtifo/metrics/: CMakeLists.txt
src/libtifo/panorama/: CMakeLists.txt  builder.cc  clean_cut_rectangle_builder.cc
tests/: bedroom1_small.ppm  bedroom2_small.ppm  bedroom3_small.ppm  cut_julie_1.ppm  cut_julie_2.ppm  cut_julie_3.ppm  cut_julie_4.ppm  cut_julie_5.ppm  cut_julie_6.ppm  cut_julie_7.ppm  cut_julie_8.ppm  cute_cat.ppm  cute_cat_p3.ppm  julie.ppm  julie2.ppm  landscape_small.ppm  other_cute_cat.ppm
(+35 files in other folders)
